# Midori-AI-AutoFighter

./: .gitignore  ABOUTGAME.md  AGENTS.md  BUILD.md  COMMUNICATION_REFACTOR.md  DEVELOPMENT.md  Dockerfile.js  Dockerfile.python  README.md  assets.toml  build.sh  buldfoepassives.py  card_audit_report.md  compose.yaml  config.json  damage_over_time.py  damagestate.py  damagetypes.py  feedback.md  foe_passive_builder.py  gamestates.py  healing_over_time.py  hello.py  items.py  load_photos.py  luna_items_prompts.txt  main.py  myunderstanding.md  oldpassives.py  passives.py  play.sh  player.json  player.py  playerpassives.py  pyproject.toml  relic_audit_report.md  ruff.toml  run-tests.sh  save.db  screendata.py  (+4 more)
backend/: DOT_ASYNC_OPTIMIZATIONS.md  README.md  app.py  assets.toml  async_db_utils.py  battle_logging.py  debug_player_editor.py  demo_passives.py  docker-entrypoint.sh  game.py  logging_config.py  options.py  player_customization.json  pyproject.toml  test_800_dots_performance.py  test_async_improvements.py  test_player_editor_backend.py  tts.py
backend/.codex/implementation/: battle-action-events.md  battle-defeat.md  battle-logging.md  battle-snapshots.md  effect-stacking.md  gacha-endpoint.md  llm-loader.md  logging-config.md  logging.md  loot-tables.md  lrm-config.md  memory-backend.md  party-picker-endpoint.md  player-editor-endpoint.md  player-upgrade-endpoint.md  reward-progression.md  save-manager.md  stat-modifiers.md  status-endpoint.md  user-level-system.md  vitality-effects.md
backend/assets/models/: body_b.bam  body_c.egg  cube.bam
backend/autofighter/: __init__.py  action_queue.py  cards.py  character.py  effects.py  gacha.py  mapgen.py  party.py  passives.py  relics.py  rooms.py  save_manager.py  stats.py  summons.py
backend/autofighter/rooms/: __init__.py  battle.py  boss.py  chat.py  rest.py  shop.py  utils.py
backend/autofighter/summons/: __init__.py  base.py  manager.py
backend/game/: __init__.py  actors.py
backend/llms/: __init__.py  loader.py  safety.py  torch_checker.py
backend/migrations/: 001_init.sql  002_gacha.sql  003_upgrades.sql
backend/mods/: example_mod.py
backend/plugins/: damage_effects.py  event_bus.py  plugin_loader.py
backend/plugins/cards/: __init__.py  _base.py  a_micro_blade.py  adamantine_band.py  arc_lightning.py  arcane_repeater.py  balanced_diet.py  battle_meditation.py  bulwark_totem.py  calm_beads.py  coated_armor.py  critical_focus.py  critical_overdrive.py  critical_transfer.py  elemental_spark.py  enduring_charm.py  enduring_will.py  energizing_tea.py  expert_manual.py  farsight_scope.py  fortified_plating.py  guardian_shard.py  guiding_compass.py  honed_point.py  inspiring_banner.py  iron_guard.py  iron_resolve.py  iron_resurgence.py  keen_goggles.py  lightweight_boots.py  lucky_coin.py  mindful_tassel.py  mystic_aegis.py  overclock.py  phantom_ally.py  polished_shield.py  precision_sights.py  reality_split.py  reinforced_cloak.py  rejuvenating_tonic.py  (+13 more)
backend/plugins/damage_types/: __init__.py  _base.py  dark.py  fire.py  generic.py  ice.py  light.py  lightning.py  wind.py
backend/plugins/dots/: abyssal_corruption.py  abyssal_weakness.py  blazing_torment.py  bleed.py  celestial_atrophy.py  charged_decay.py  cold_wound.py  frozen_wound.py  gale_erosion.py  impact_echo.py  poison.py  shadow_siphon.py  twilight_decay.py
backend/plugins/effects/: aftertaste.py  critical_boost.py
backend/plugins/events/: chest.py  fountain.py
backend/plugins/foes/: __init__.py  _base.py  slime.py
backend/plugins/hots/: player_echo.py  player_heal.py  radiant_regeneration.py  regeneration.py
backend/plugins/passives/: __init__.py  advanced_combat_synergy.py  ally_overload.py  attack_up.py  becca_menagerie_bond.py  bubbles_bubble_burst.py  carly_guardians_aegis.py  chibi_tiny_titan.py  graygray_counter_maestro.py  hilander_critical_ferment.py  ixia_tiny_titan.py  kboshi_flux_cycle.py  lady_darkness_eclipsing_veil.py  lady_echo_resonant_static.py  lady_fire_and_ice_duality_engine.py  lady_light_radiant_aegis.py  lady_of_fire_infernal_momentum.py  luna_lunar_reservoir.py  mezzy_gluttonous_bulwark.py  mimic_player_copy.py  room_heal.py  (+2 more)
backend/routes/: assets.py  catalog.py  config.py  gacha.py  guidebook.py  performance.py  players.py  rewards.py  rooms.py  runs.py  ui.py
backend/services/: reward_service.py  room_service.py  run_service.py  user_level_service.py
backend/tests/: test_100_fallback_effects_stress.py  test_800_dots_performance.py  test_accelerate_dependency.py  test_accelerate_fix_verification.py  test_action_queue.py  test_advanced_passive_behaviors.py  test_aftertaste.py  test_aggro_field.py  test_aggro_property.py  test_animation_timers.py  test_app.py  test_app_without_llm_deps.py  test_arc_lightning.py  test_async_bus_stress_with_backend_ping.py  test_async_dot_optimizations.py  test_base_runtime_stats.py  test_battle_defeat.py  test_battle_end_on_all_foes_dead.py  test_battle_error_snapshot.py  test_battle_logging.py  test_battle_logging_single_start.py  test_battle_loot_items.py  test_battle_rewards.py  test_battle_snapshot_consistency.py  test_battle_snapshot_reload.py  test_battle_summary_endpoint.py  test_battle_timing.py  test_boss_room_single_foe.py  test_bubbles_bubble_burst_logic.py  test_bus_stress_party_foes.py  test_card_effects.py  test_card_rewards.py  test_carly_guardians_aegis.py  test_celestial_atrophy.py  test_character_editor.py  test_character_passives.py  test_chat_room.py  test_choose_foe_damage_type.py  test_config_lrm.py  test_critical_boost.py  (+103 more)
legacy/: REMINDER_FOR_COPILOT.md  damage_over_time.py  damagestate.py  damagetypes.py  do not change.txt  foe_passive_builder.py  gamestates.py  healing_over_time.py  items.py  legacy_stats_compat.py  load_photos.py  main.py  midori-autofighter-non-llm-linux.spec  passives.py  play.sh  player.py  pyproject.toml  screendata.py  test-build.spec  timerhelper.py  weapons.py
legacy/builder/: start_build.sh
legacy/plugins/: plugin_loader.py
legacy/tests/: test_passive_plugins.py  test_player_plugins.py  test_weapon_plugins.py
(+980 files in other folders)
