[project]
name = "autofighter"
version = "0.1.0"
description = "Panda3D rewrite scaffold for Midori AI AutoFighter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "panda3d>=1.10.15",
    "rich>=13.0.0",
    "sqlcipher3-binary>=0.5.4",
]

[project.optional-dependencies]
llm-cpu = [
    "torch",
    "torchvision",
    "torchaudio",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
]

llm-cuda = [
    "torch",
    "torchvision",
    "torchaudio",
    "xformers",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
]

llm-amd = [
    "torch",
    "torchvision",
    "torchaudio",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
]

[project.scripts]
autofighter = "main:main"
