[project]
name = "Midoris-AutoFighter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "halo>=0.0.31",
    "pygame>=2.6.1",
    "snakeviz>=2.2.2",
]

[project.optional-dependencies]
llm-cpu = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
llm-cuda = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "nvidia-ml-py>=12.0.0",
]
llm-amd = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
